--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,14 +1,11 @@
 html,
 body {
-    background: #090f0e;
+    /* background: #090f0e; */
+    background: #050f0d;
     padding: 0;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
         Helvetica Neue, sans-serif;
-}
-
-canvas {
-    background: #090f0e;
 }
 
 a {
