Add Logo and no gravity mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400&display=swap');
+
 html,
 body {
     /* background: #090f0e; */
-    background: #050f0d;
+    background: #090f0e;
     padding: 0;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-        Helvetica Neue, sans-serif;
+    font-family: 'Raleway', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+        Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+        sans-serif;
+}
+
+#Hero {
+    height: calc(100vh + 100px);
 }
 
 a {
