--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,10 +36,12 @@ p {
 }
 
 h1 {
+    font-size: 5.5rem;
+    line-height: 6rem;
+    font-weight: 300;
     color: rgba(0, 255, 163, 1);
-    text-decoration: none;
     background: linear-gradient(
-        90deg,
+        40deg,
         rgba(0, 163, 255, 1),
         rgba(0, 255, 163, 1)
     );
@@ -48,12 +50,25 @@ h1 {
     text-shadow: -2rem 0.5rem 5rem rgba(0, 163, 255, 0.5),
         1rem -0.5rem 5rem rgba(0, 255, 163, 0.5);
 
-    font-size: 5rem;
-    line-height: 6rem;
     margin: 0;
     padding-bottom: 4rem;
 }
+section h1::after {
+    content: '';
+    display: inline-block;
+    vertical-align: baseline;
+    margin-left: 1rem;
+    width: 3rem;
+    height: 3px;
+    background: linear-gradient(
+        90deg,
+        rgba(0, 163, 255, 1),
+        rgba(0, 255, 163, 1)
+    );
+}
 h2 {
+    font-size: 2.5rem;
+    font-weight: 600;
     color: rgba(0, 255, 163, 1);
     text-decoration: none;
     background: linear-gradient(
@@ -66,7 +81,6 @@ h2 {
     text-shadow: -2rem 0.5rem 5rem rgba(0, 163, 255, 0.5),
         1rem -0.5rem 5rem rgba(0, 255, 163, 0.5);
 
-    font-size: 3rem;
     margin: 0;
     padding: 3rem 0 1rem;
 }
@@ -98,4 +112,68 @@ a:hover {
 
 * {
     box-sizing: border-box;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        filter: blur(50px);
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes FlyIn {
+    0% {
+        transform: scale(0.9);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+@keyframes Loading {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+@keyframes GravityActive {
+    0% {
+        box-shadow: 0 0 30px 2px rgba(223, 1, 149, 0.612);
+    }
+    20% {
+        box-shadow: 0 0 30px 8px rgba(223, 1, 149, 0.612);
+    }
+    40% {
+        box-shadow: 0 0 30px 7px rgba(223, 1, 149, 0.612);
+    }
+    50% {
+        box-shadow: 0 0 30px 12px rgba(223, 1, 149, 0.612);
+    }
+    60% {
+        box-shadow: 0 0 30px 9px rgba(223, 1, 149, 0.612);
+    }
+    70% {
+        box-shadow: 0 0 30px 13px rgba(223, 1, 149, 0.612);
+    }
+    100% {
+        box-shadow: 0 0 30px 10px rgba(223, 1, 149, 0.612);
+    }
+}
+
+#Hero {
+    animation: 1s fadeIn 1;
+}
+
+#Logo {
+    animation: 3s FlyIn 1;
+}
+
+::selection {
+    background: #01c2e1;
+    color: #000;
 }
