--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,7 +28,8 @@ body {
 #Hero,
 #__next {
     height: 100%;
-    min-height: 100%;
+    height: 100lvh;
+    min-height: 70rem;
 }
 
 p {
@@ -174,6 +175,6 @@ a:hover {
 }
 
 ::selection {
-    background: #01c2e1;
-    color: #000;
+    background: rgba(1, 195, 225, 0.455);
+    color: #fff;
 }
